<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegundoActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="267dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.083">

        <TextView
            android:id="@+id/tvRespIndi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_title"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvVacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/void_char"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvRespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvVacio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/void_char"
            android:textSize="34sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle6"
        android:layout_width="355dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="355dp"
        android:layout_height="309dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.329">

        <TextView
            android:id="@+id/tvHablarIndi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talk_title"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/tvVacio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/void_char"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/talk_me"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvVacio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/void_char"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Responder"
            android:text="@string/send" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>